--- a/Aufgabe02/styles/style.css
+++ b/Aufgabe02/styles/style.css
@@ -1,47 +1,52 @@
 /*
-Aufgabe: Aufgabe 1 
+Aufgabe: Aufgabe 2
 Name: Mario Eigeldinger
 Matrikel: 261167
-Datum: 24.04.2020
-Hiermit versichere ich, dass ich diesen Code selbst vom Repository kopiert & weitere Styles hinzugefügt habe.
+Datum: 02.05.2020
+Hiermit versichere ich, dass ich diesen Code selbst geschrieben habe.
 */
-div {
-    border: thick solid black;
-    position: absolute;
-}
 
-.big {
-    width: 50px;
-    height: 50px;
-}
-.medium {
-    width: 30px;
-    height: 30px;
-}
-.small {
-    width: 10px;
-    height: 10px;
-}
-
-header {
-    margin-right: 1em;
-}
 
 h1 {
     font-size: 2em;
     color: darkblue;
-    text-align: right;
+    text-align: center;
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
     margin-bottom: 0.25em;
 
 }
 
-h4 {
+h3 {
     color: darkblue;
-    text-align: right;
-    font-style: italic;
+    text-align: center;
     font-weight: lighter;
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
     padding: 0em;
     margin: 0em;
+}
+
+p  {
+    text-align: center;
+    margin-bottom: 0.25em;
+    margin-left: 10em;
+    margin-right: 10em;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+}
+
+div {
+    text-align: center;
+    }
+
+button {
+    background-color: darkslateblue;
+    border: 0px;
+    padding: 0.5em;
+    margin: 1em;
+}
+
+button a {
+    color: white;
+    text-transform: uppercase;
+    text-decoration-line: none;
+    font-size: 0.7em;
 }
