--- a/Aufgabe08/styles/style.css
+++ b/Aufgabe08/styles/style.css
@@ -5,6 +5,14 @@ Matrikel: 261167
 Datum: 13.06.2020
 Hiermit versichere ich, dass ich diesen Code selbst geschrieben habe...
 */
-body {
+body, html {
     margin: 0em;
+    width: 100%;
+    height: 100%;
     }
+
+/*#canvas {
+    width: 100%;
+    height: 100%;
+}
+*/
